<resources>
    <string name="app_name" translatable="false">DoItWithAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_task">Tasks</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_graphs">Stats</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_edit_task_date_format">M.d.yyyy    hh:mm a</string>
    <string name="add_edit_task_priority_high">High</string>
    <string name="add_edit_task_priority_medium">Medium</string>
    <string name="add_edit_task_priority_low">Low</string>
    <string name="add_edit_task_deadline_pick_header">Pick deadline</string>
    <string name="add_edit_task_title_reopen_task">Reopen Task</string>
    <string name="add_edit_task_title_edit_task">Edit Task</string>
    <string name="add_edit_task_title_add_task">Add Task</string>
    <string name="add_edit_task_title_empty">Please insert the title of the task</string>
    <string name="add_edit_task_description_empty">Please insert a description of the task</string>
    <string name="add_edit_task_deadline_empty">Please pick a deadline</string>
    <string name="fragment_home_overview_all_task_succ">Great! You can complete all your tasks!</string>
    <string name="fragment_home_overview_all_task_fail">Try skipping low priority tasks. Then you can make it!</string>
    <string name="fragment_home_overview_med_task_succ">You’re able to complete medium and higher priority tasks</string>
    <string name="fragment_home_overview_med_task_fail">Skip low and medium priority tasks, focus on high!</string>
    <string name="fragment_home_overview_high_task_succ">You can complete all high priority tasks</string>
    <string name="fragment_home_overview_high_task_fail">Oh, you cannot complete all high priority tasks. Consider changing deadlines.</string>
    <string name="task_delete">Delete</string>
    <string name="fragment_archived_tasks_cannot_update_task">Task cannot be updated</string>
    <string name="fragment_archived_tasks_reopen_task">Task reopened successfully</string>
    <string name="fragment_archived_tasks_task_not_reopen">Task not reopened</string>
    <string name="home_fragment_task_done">Task done! Good work!</string>
    <string name="complete_task">Complete task</string>
    <string name="tutorial_title_call_mom">Call mum</string>
    <string name="tutorial_title_call_mom_des">Tell mum to have a nice day</string>
    <string name="tutorial_buy_milk_title">Buy milk</string>
    <string name="tutorial_buy_milk_des">Buy the freshest milk</string>
    <string name="tutorial_go_to_work_title">Go to work</string>
    <string name="tutorial_go_to_work_des">Make some money</string>
    <string name="hours_short" translatable="false">h</string>
    <string name="minutes_short" translatable="false">min</string>
    <string name="home_fragment_tutorial_welcome_title">Welcome</string>
    <string name="home_fragment_tutorial_welcome_des">Welcome to DoItWithAndroid, since this is your first launch, lets take a look at how to use this awesome app</string>
    <string name="home_fragment_tutorial_menu_title">Menu</string>
    <string name="home_fragment_tutorial_menu_des">This is the main menu, use it to go navigate the application</string>
    <string name="home_fragment_tutorial_overall_lvl_title">Overall level</string>
    <string name="home_fragment_tutorial_overall_lvl_des">"This is your level. You will earn experience by completing your tasks. Try to complete as many tasks as you can to become an effective person with a high level! "</string>
    <string name="home_fragment_tutorial_exp_title">Experience</string>
    <string name="home_fragment_tutorial_exp_des">This is your current experience and experience you need to reach a new level. Every new level will require more experience than the last. It will get harder over time, but you can do it!</string>
    <string name="home_fragment_tutorial_time_remaining_title">Time remaining</string>
    <string name="home_fragment_tutorial_time_remaining_des">"This is your working time remaining today. The timer will stop when you add a task, because the application assumes that you started working. When you complete a task, the timer will recalculate how much work there is left. "</string>
    <string name="home_fragment_tutorial_todo_tasks_title">Tasks to do today</string>
    <string name="home_fragment_tutorial_todo_tasks_des">Here are the tasks you should do today. You do not have to complete them in the given order, it is just recommended. Every task has its own colour based on its priority. RED means high, YELLOW is medium and GREEN is low. Experience gained per task is based on priority and duration. When you complete a task, simply swipe left to mark it as done.</string>
    <string name="home_fragment_tutorial_gray_tasks_title">Grey tasks</string>
    <string name="home_fragment_tutorial_gray_tasks_des">Grey tasks are the same as normal tasks, the only difference is that when your tasks are grey, you are not in your productive hours.  You can still complete tasks, but the planner will not count their duration to your working time left today, and their completion time will be same as their estimated time. Feel free to complete tasks outside of your productive hours, the planner will recalculate your schedule :)</string>
    <string name="home_fragment_tutorial_more_parts_title">Tasks with multiple parts</string>
    <string name="home_fragment_tutorial_more_parts_des">"If you do not have enough productive time left today to fit in the whole task, or you have a task that is longer than you daily productive time, the task will be split into parts. This task will be displayed like any other, but a percentage, showing how much of the overall task each part contains will be displayed.  "</string>
    <string name="home_fragment_tutorial_overview_title">Quick overview</string>
    <string name="home_fragment_tutorial_overview_des">If you swipe left on you current level, you will get to a quick overview of your tasks. Here you can see a summary of what you can achieve within your deadlines</string>
    <string name="home_fragment_tutorial_overview_all_title">All tasks</string>
    <string name="home_fragment_tutorial_overview_all_des">"If you see this line as green - Great! If you complete all your tasks according to the schedule, you can do them all.  Try to complete tasks as quickly as possible to see green as often as possible. "</string>
    <string name="home_fragment_tutorial_overview_med_title">Medium and high priority tasks</string>
    <string name="home_fragment_tutorial_overview_med_des">"If the overview turns red, but this line is still green, you do not have to worry too much. This means that you are still able to complete all medium and high priority task and Do It With Android will prepare a plan to complete them. However if you see this line red, that means you are not able to complete all medium priority tasks. "</string>
    <string name="home_fragment_tutorial_overview_high_title">High priority tasks</string>
    <string name="home_fragment_tutorial_overview_high_des">If all goes to red, but high priorities stay green, there is still hope. That means you are able to complete at least all your high priority tasks, the schedule will ignore lower priority tasks and will create a plan to complete the most important things. If you see this red, you have a problem. You will not be able to complete all your high priority tasks no matter what you do. You will have to work out of your working hours or you will have to change deadlines/priorities</string>
    <string name="level_fragment_progress">Progress</string>
    <string name="fragment_overview_line_experience">Experience gained</string>
    <string name="fragment_overview_bar_tasks_day">Tasks completed per day</string>
    <string name="fragment_overview_bar_tasks_month">Tasks completed per month</string>
    <string name="fragment_overview_pie_priority_ratio">Tasks priority ratio</string>
    <string name="overview_fragment_tutorial_statistics_title">Statistics</string>
    <string name="fragment_overview_statistics_des">Statistics screen is exactly what you expect. You can see the statistics about your progress, completed tasks and more. Just scroll down and look at everything you’ve already accomplished! :)</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_settings_butt_tutorial_title">Run tutorial again?</string>
    <string name="activity_settings_dialog_tutorial">This action will close settings and will enable the tutorial to run once again.  Do you want to run the tutorial again?</string>
    <string name="activity_settings_dialog_prod_time_title">Confirm your productive time</string>
    <string name="activity_settings_dialog_prod_time_p1">Your productive time is:</string>
    <string name="activity_settings_dialog_prod_time_p2">hours</string>
    <string name="activity_settings_dialog_prod_time_p3">minutes</string>
    <string name="task_adapter_deadline_not_completable">This deadline cannot be met!</string>
    <string name="task_adapter_focus_task">You should focus on this task</string>
    <string name="basic_information">Basic information</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="click_to_add_date">+ Click to add date...</string>
    <string name="priority">Priority</string>
    <string name="estimated_duration">Estimated duration</string>
    <string name="hours">Hrs</string>
    <string name="minutes">Min</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="run_tutorial_again">Run tutorial again</string>
    <string name="welcome_and_do_it_with_android">Welcome and Do It With Android!</string>
    <string name="first_run2_des">"As mentioned before, you can enter your tasks and their deadlines. Each task has a title, a brief description, deadline, priority, estimated completion time and the time spent on the task. Try to give accurate time estimates for your tasks, as they are used for calculating your schedule, however, once the task is completed, the actual completion time will be used to adjust your schedule. Keep in mind the app only knows what you share with it, so you should be honest with completing your tasks, otherwise the app becomes less effective.  "</string>
    <string name="first_run3_start_des">Please set the time you normally become productive. For example after breakfast, or after your first morning coffee.</string>
    <string name="first_run3_end_des">"Enter the time you normally stop being productive. This shouldn’t be the time just before you go to bed, but for example the time before having dinner, or before watching TV.  "</string>
    <string name="complete">Complete</string>
    <string name="fragment_home_nothing_to_do">Nothing to do now</string>
    <string name="level">Level</string>
    <string name="fragment_tasks_all">All</string>
    <string name="do_it_with_android" translatable="false">Do It With Android</string>
    <string name="about_version">Version:</string>
    <string name="about_author_label">Author:</string>
    <string name="me" translatable="false">Jan Horáček</string>
    <string name="about_contact">Contact:</string>
    <string name="me_mail" translatable="false">horacek.94@gmail.com</string>
    <string name="about_awareness_title">Diclaimer</string>
    <string name="about_awareness_data">"Please be aware that the author is not responsible for any missed deadlines when using this application. The application is intended as a guide and not a guarantee. The author is not responsible for any deadlines missed while using this appplication.  "</string>
</resources>