<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_below="@id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/logo_to_use" />

            <TextView
                android:id="@+id/about_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="50dp"
                android:text="@string/do_it_with_android"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/about_version_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/about_version"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_version_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/about_author_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/about_author_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/about_contact_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/about_contact"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_contact_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_mail"
                    android:textColor="@color/design_default_color_primary" />
            </LinearLayout>

            <TextView
                android:id="@+id/about_awareness_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_awareness_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/about_awareness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_awareness_data" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
