<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_task_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_below="@id/add_task_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_info_outline_black_24dp"
                android:drawablePadding="2dp"
                android:text="@string/basic_information" />

            <EditText
                android:id="@+id/edit_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_task_desciption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_whatshot_black_24dp"
                android:drawablePadding="2dp"
                android:text="@string/deadline"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_view_add_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="@string/click_to_add_date" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_priority_high_black_24dp"
                    android:drawablePadding="2dp"
                    android:text="@string/priority"
                    android:textSize="20sp" />

                <ImageView
                    android:src="@drawable/circle"
                    android:id="@+id/circle_priority"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/number_pickser_priority" />


                <NumberPicker
                    android:id="@+id/number_pickser_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"

                    android:layout_alignParentEnd="true" />

            </RelativeLayout>


            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_access_alarms_black_24dp"
                android:drawablePadding="2dp"
                android:text="@string/estimated_duration"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <NumberPicker
                    android:id="@+id/number_picker_duration_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/hours" />

                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:text="@string/hours"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <NumberPicker
                    android:id="@+id/number_picker_duration_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@+id/number_picker_duration_hours" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/number_picker_duration_minutes"
                    android:text="@string/minutes"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
